--- a/cpp-channel/thrift-cpp-channel.cabal
+++ b/cpp-channel/thrift-cpp-channel.cabal
@@ -145,6 +145,7 @@ test-suite header-channel
                test/if/gen-cpp2/AdderAsyncClient.cpp
                test/if/gen-cpp2/Adder.cpp
                test/if/gen-cpp2/math_types.cpp
+               test/if/gen-cpp2/math_data.cpp
                test/if/gen-cpp2/math_metadata.cpp
   extra-libraries:
         thriftmetadata
